--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Gesture sensed Snake Game" src="/assets/img/snake.png"
+                <img alt="Gesture sensed Snake Game" src="/assets/img/snake.PNG"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
