--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <h2>Hi, I'm <span class="teal">Protik Bose Pranto.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>"Everything is theoretically possible until it is done" - Robert Anson Heinlein </h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/protik-bose-pranto-b67967141/" target="_blank">
