--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Protik Bose Pranto</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Protik Bose Pranto</a><span class="black-text">Believe in Yourself</span>
     </div>
   </nav>
 
@@ -222,7 +222,7 @@
               <h2>Hi, I'm <span class="teal">Protik Bose Pranto.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>"Everything is theoretically possible until it is done" - Robert Anson Heinlein </h5>
+              <h5>"Everything is theoretically possible, until it is done" - Robert Anson Heinlein </h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/protik-bose-pranto-b67967141/" target="_blank">
@@ -251,7 +251,7 @@
               </a> -->
             </div>
             <div class='buttons'>
-              <a href="#about" class="readme">Read More</a>
+              <a href="#about" class="readme">About Me</a>
               <a href="#contact" class="contactme">Contact Me</a>
             </div>
           </div>
@@ -271,19 +271,19 @@
         </blockquote> -->        
         <p>
           I have received my B.Sc (Engg.) in Computer Science and Engineering from <a href="https://www.buet.ac.bd/web/#/" target="_blank"
-          class="teal-text hoverline">Bangladesh University of Engineering and Technology(BUET)</a>. 
+          class="teal-text hoverline"><b>Bangladesh University of Engineering and Technology(BUET)</b></a>. 
 
           I am currently working as a Software Engineer at <a href="https://chaldal.tech/" target="_blank"
-          class="teal-text hoverline">Chaldal Tech</a> which is one of the largest online grocery stores in Bangladesh.
+          class="teal-text hoverline"><b>Chaldal Tech</b></a> which is one of the largest online grocery stores in Bangladesh.
 
         </p>
         <p>
           In my present research work, I am working on preventing the spread of Covid related misinformation in social media under the supervision of <a href="https://giasuddin.ca/" target="_blank"
-          class="teal-text hoverline">Dr. Gias Uddin</a> and <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en" target="_blank"
-          class="teal-text hoverline">Dr. Anindya Iqbal</a>.
+          class="teal-text hoverline"><b>Dr. Gias Uddin</b></a> and <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en" target="_blank"
+          class="teal-text hoverline"><b>Dr. Anindya Iqbal</b></a>.
 
           I completed my undergraduate thesis under the supervision of Professor <a href="http://saidurrahman.buet.ac.bd/" target="_blank"
-          class="teal-text hoverline">Dr. Md. Saidur Rahman</a> on Graph Theory and Algorithms.
+          class="teal-text hoverline"><b>Dr. Md. Saidur Rahman</b></a> on Graph Theory and Algorithms.
         </p>
         <p>
           My research interests include Human-centered AI Engineering, Computer Vision, Natural Language Processing, Graph Theory, Human-Computer Interaction, Machine Learning and it's applications. 
@@ -339,7 +339,7 @@
                   <div class="col s12 m10">
                     <p>
                       <span class="card-title"><a href="https://cse.buet.ac.bd/research/group/gd/" target="_blank"
-                          class="teal-text hoverline">Graph Drawing Research Group</a></span>
+                          class="teal-text hoverline"><b>Graph Drawing Research Group</b></a></span>
                     </p>
                   </div>
                 </div>
@@ -389,7 +389,7 @@
                   <div class="col s12 m10">
                     <p>
                       <span class="card-title"><a href="https://chaldal.tech/" target="_blank"
-                          class="teal-text hoverline">Chaldal Tech</a></span>
+                          class="teal-text hoverline"><b>Chaldal Tech</b></a></span>
                     </p>
                   </div>
                 </div>
@@ -411,13 +411,13 @@
                   <h5><b>EggShell Team</b></h5>
                   <h5></h5>
                   <li>
-                    <a href="https://eggshell.dev/" target="_blank" class="teal-text hoverline">EggShell</a> is a front-end technology stack. It combines several technologies, including React, Fable, ReactXP, RenderDSL, and StyleDSL, to create a common framework for both web and android.
+                    <a href="https://eggshell.dev/" target="_blank" class="teal-text hoverline"><b>EggShell</b></a> is a front-end technology stack. It combines several technologies, including React, Fable, ReactXP, RenderDSL, and StyleDSL, to create a common framework for both web and android.
                   </li>
                   <li>
-                    In the EggShell framework, I created a new and advanced button library called <a href="https://eggshell.dev/" target="_blank" class="teal-text hoverline">ChoiceList</a>. Depending on the user's preferences, this button can serve the function of a radio button or a checkbox.   
+                    In the EggShell framework, I created a new and advanced button library called <a href="https://eggshell.dev/" target="_blank" class="teal-text hoverline"><b>ChoiceList</b></a>. Depending on the user's preferences, this button can serve the function of a radio button or a checkbox.   
                   </li>
                   <li>
-                    Using the Eggshell framework, I assisted the team in creating <a href="https://cookups.subject.dev/" target="_blank" class="teal-text hoverline">Cookups</a>, an online food delivery platform.
+                    Using the Eggshell framework, I assisted the team in creating <a href="https://cookups.subject.dev/" target="_blank" class="teal-text hoverline"><b>Cookups</b></a>, an online food delivery platform.
                   </li>
                   <li>
                     <b>Tools:</b> F#, Fable, React
@@ -490,6 +490,20 @@
             </div>
           </div>
         </div>
+        <div class="col s12 m6 l6">
+          <div class="card">
+            <div class="card-content">
+              <h4>"Violence Detection from Surveillance Videos"</h4>
+              <ul>
+                <li>We extracted two kinds of features from videos</li>
+                <li>Those features entail deep representation from I3D and optical flow from OpenPose</li>
+                <li>We employed heirarchical Multiple Instance Learning to facilitate detection</li>
+                <li>We emphasized on interpretability as well as accuracy of our system </li>
+                <li><b>Keywords:</b> Optical Flow, Heirarchical Multiple Instance Learning, Video Classification, Interpretable System</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -505,7 +519,7 @@
                 <img alt="Vasha-Sikkha" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Vasha-Sikkha<i
+                <span class="card-title activator teal-text hoverline"><b>Vasha-Sikkha</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   An application that helps you learn English in a very interactive way.
@@ -545,7 +559,7 @@
                 <img alt="CovidLife" src="/assets/img/covidlife.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">CovidLife<i
+                <span class="card-title activator teal-text hoverline"><b>CovidLife</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a health related android application based on Flutter.
@@ -586,7 +600,7 @@
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Gesture Sensed Snake<i
+                <span class="card-title activator teal-text hoverline"><b>Gesture Sensed Snake</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a hardware project using Atmega32 and Accelerometer sensor.
@@ -623,7 +637,7 @@
                 <img alt="Hotel Management System" src="/assets/img/Hotel-Reception.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Hotel Management System<i
+                <span class="card-title activator teal-text hoverline"><b>Hotel Management System</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a Java and Oracle Database based Project.
@@ -658,7 +672,7 @@
                 <img alt="Multiplayer Online Poker" src="/assets/img/poker.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Multiplayer Online Poker<i
+                <span class="card-title activator teal-text hoverline"><b>Multiplayer Online Poker</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a Java-based multiplayer online card game.
@@ -696,7 +710,7 @@
                 <img alt="Baby's Walk" src="/assets/img/baby.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Baby's Walk<i
+                <span class="card-title activator teal-text hoverline"><b>Baby's Walk</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a simple iGraphics game. Here user has to balance a walking baby by left-right mouse clicking.
@@ -730,7 +744,7 @@
                 <img alt="Mancala" src="/assets/img/mancala.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Mancala<i
+                <span class="card-title activator teal-text hoverline"><b>Mancala</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   This is a Java-based AI-based two-player game.
@@ -763,7 +777,7 @@
                 <img alt="compiler" src="/assets/img/compiler.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Compiler<i
+                <span class="card-title activator teal-text hoverline"><b>Compiler</b><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Let's build a compiler from scratch.
@@ -828,7 +842,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.buet.ac.bd/web/#/" target="_blank" class="teal-text hoverline">Bangladesh University of Engineering and Technology (BUET)</a></span>
+                  <span class="card-title"><a href="https://www.buet.ac.bd/web/#/" target="_blank" class="teal-text hoverline"><b>Bangladesh University of Engineering and Technology (BUET)</b></a></span>
                 </p>
                 <p class="brown-text">Dhaka, Bangladesh</p>
                 <p>
