add accepted paper

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Protik Bose Pranto | Software Developer" />
+  <meta property="og:title" content="Protik Bose Pranto" />
   <meta property="og:description" content="Software Developer" />
   <meta property="og:url" content="https://protikbose.github.io/" />
-  <meta property="og:site_name" content="Protik Bose Pranto | Software Developer" />
+  <meta property="og:site_name" content="Protik Bose Pranto" />
   <meta property="article:publisher" content="https://protikbose.github.io/" />
   <meta property="og:image" content="https://protikbose.github.io/examples/preview.JPG" />
   <!-- Twitter -->
@@ -97,6 +97,12 @@
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
+      </li>
+
+      <li class="bold">
+        <a aria-label="Navigate to the Publication section" href="#publication"
+          class="waves-effect waves-dark teal-text"><i
+            class="mdi-action-trending-up small"></i><span>Publication</span></a>
       </li>
 
       <li class="bold">
@@ -180,6 +186,11 @@
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Publication section" href="#publication"
+          class="waves-effect waves-dark teal-text"><i
+            class="mdi-action-trending-up small"></i><span>Publication</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Research Works section" href="#research_works" class="waves-effect waves-dark teal-text"><i
@@ -433,6 +444,24 @@
       </div>
     </section>
 
+    <!--Publications-->
+    <section id="publication" class="section scrollspy">
+      <h3 class="page-title white-text teal">Publication</h3>
+      <div class="container">
+        <div class="col s12 m6 l6">
+          <div class="card">
+            <div class="card-content">
+              <p><ul>
+                <li>
+                  <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman. k-Safe Labelings of Connected Graphs. IEEE International Conference on Telecommunications and Photonics, ICTP (2021).
+                  <a href="https://protikbose.github.io/assets/publication/SafeLabeling.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
+                </li>
+              </lu></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <!-- Research Works -->
     <section id="research_works" class="section scrollspy">
       <h3 class="page-title white-text teal">Research Projects</h3>
@@ -442,7 +471,7 @@
             <div class="card-content">
               <h4>"Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook"</h4>
               <p><u>Author</u>: <b>Protik Bose Pranto</b>, Syed Zamiul Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal</p>
-              <p><u>Status</u>: <b>Under Review</b> at The ACM CHI Conference on Human Factors in Computing Systems, <b>CHI (2022)</b>.</p>
+              <p><u>Status</u>: <b>Submitted</b> at The ACM CHI Conference on Human Factors in Computing Systems, <b>CHI (2022)</b>.</p>
               <br><p>Our opinions and views of life can be shaped by how we perceive the opinions of others on social media like Facebook. 
                 This dependence has increased during COVID-19 periods when we have fewer means to connect with others. 
                 However, fake news related to COVID-19 has become a significant problem on Facebook. Bengali is the seventh most
@@ -478,7 +507,7 @@
             <div class="card-content">
               <h4>"<i>k</i>-Safe Labelings of Connected Graphs"</h4>
               <p><u>Author</u>: <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman.</p>
-              <p><u>Status</u>: <b>Under Review</b> at IEEE International Conference on Telecommunications and Photonics, <b>ICTP (2021)</b>.</p>
+              <p><u>Status</u>: <b>Accepted</b> at IEEE International Conference on Telecommunications and Photonics, <b>ICTP (2021)</b>.</p>
               <br><p>In a <i>k</i>-safe labeling of a graph <i>G</i>, each vertex is labeled by a distinct positive integer such that 
                 the difference of the labels of two adjacent vertices is at least <i>k</i>. The span of a <i>k</i>-safe labeling of <i>G</i> is 
                 the range between the minimum and the maximum labels used in <i>G</i>. The <i>k</i>-safe labeling problem asks to label 
