--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 
       <li class="bold">
         <a aria-label="Navigate to the Publication section" href="#publication"
-          class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Publication</span></a>
+          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Publication</span></a>
       </li>
 
       <li class="bold">
@@ -189,8 +188,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Publication section" href="#publication"
-          class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Publication</span></a>
+          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Publication</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Research Works section" href="#research_works" class="waves-effect waves-dark teal-text"><i
