--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
           </div>
         </div>
       </div>
+    </section>
 
     <!-- Research Works -->
     <section id="research_works" class="section scrollspy">
