added new publication

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Research Works section" href="#research_works" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Research</span></a>
+            class="mdi-social-school small"></i><span>Research</span></a>
       </li>
 
       <li class="bold">
@@ -192,7 +192,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Research Works section" href="#research_works" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Research</span></a>
+            class="mdi-social-school small"></i><span>Research</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
@@ -455,6 +455,11 @@
                   <a href="https://protikbose.github.io/assets/publication/SafeLabeling.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
                 </li>
               </lu></p>
+              <p><ul>
+                <li>
+                  Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman. On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs. The Computer Journal, COMPJ (2021).
+                </li>
+              </lu></p>
             </div>
           </div>
         </div>
@@ -487,7 +492,7 @@
             <div class="card-content">
               <h4>"On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs"</h4>
               <p><u>Author</u>: Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman.</p>
-              <p><u>Status</u>: <b>Under Review</b> at The Computer Journal, <b>COMPJ (2021)</b>.</p>
+              <p><u>Status</u>: <b>Accepted</b> at The Computer Journal, <b>COMPJ (2021)</b>.</p>
               <br><p>A graph <i>G=(V, E)</i> is called a pairwise compatibility graph (PCG, for short) if it admits a tuple(T, d_min, d_max) of 
                 an edge-weighted tree <i>T</i> of non-negative edge weights with leaf set <i>L</i>, two non-negative real numbers <i>d_min</i> ≤ <i>d_max</i> such 
                 that each vertex <i>u′∈ V</i> represents a leaf <i>u ∈ L</i> and <i>G</i> has an edge <i>(u′, v′) ∈ E</i> if and only if the distance between the two 
