--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     In the EggShell framework, I created a new and advanced button library called <a href="https://eggshell.dev/" target="_blank" class="teal-text hoverline"><b>ChoiceList</b></a>. Depending on the user's preferences, this button can serve the function of a radio button or a checkbox.   
                   </li>
                   <li>
-                    Using the Eggshell framework, I assisted the team in creating <a href="https://cookups.subject.dev/" target="_blank" class="teal-text hoverline"><b>Cookups</b></a>, an online food delivery platform.
+                    Using the Eggshell framework, I assisted the team in creating <a href="https://cookups.app/" target="_blank" class="teal-text hoverline"><b>Cookups</b></a>, an online food delivery platform.
                   </li>
                   <li>
                     <b>Tools:</b> F#, Fable, React
